--- a/src/vista/PanelEmpleado.form
+++ b/src/vista/PanelEmpleado.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
   </Properties>
@@ -76,7 +76,7 @@
                           </Group>
                       </Group>
                       <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
-                          <Component id="panelProductoSelect" alignment="0" pref="0" max="32767" attributes="0"/>
+                          <Component id="panelProductoSelect" alignment="0" pref="617" max="32767" attributes="0"/>
                           <Component id="jScrollPane2" alignment="0" pref="617" max="32767" attributes="0"/>
                       </Group>
                   </Group>
@@ -145,11 +145,11 @@
                 </Property>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                   <Table columnCount="8" rowCount="0">
-                    <Column editable="false" title="Id" type="java.lang.String"/>
+                    <Column editable="false" title="Id" type="java.lang.Integer"/>
                     <Column editable="false" title="Nombre" type="java.lang.String"/>
                     <Column editable="false" title="Apellido" type="java.lang.String"/>
-                    <Column editable="false" title="Direccion" type="java.lang.String"/>
                     <Column editable="false" title="Telefono" type="java.lang.String"/>
+                    <Column editable="false" title="Direccion" type="java.lang.String"/>
                     <Column editable="false" title="Correo" type="java.lang.String"/>
                     <Column editable="true" title="Cargo" type="java.lang.String"/>
                     <Column editable="true" title="Salario" type="java.lang.Float"/>
