--- a/src/vista/Facturacion.form
+++ b/src/vista/Facturacion.form
@@ -207,9 +207,6 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Tahoma" size="14" style="0"/>
             </Property>
-            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/icons/preview_search_find_locate_1551.png"/>
-            </Property>
             <Property name="text" type="java.lang.String" value="Buscar Prod."/>
           </Properties>
           <Events>
@@ -220,9 +217,6 @@
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Tahoma" size="14" style="0"/>
-            </Property>
-            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/icons/shopping-basket-remove256_24901.png"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Cancelar"/>
           </Properties>
@@ -448,9 +442,6 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Tahoma" size="14" style="0"/>
             </Property>
-            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/icons/client.png"/>
-            </Property>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel12">
@@ -565,7 +556,7 @@
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
                       <Component id="cajaCantidadProdFact" max="32767" attributes="0"/>
-                      <Component id="btnBorrarProducto" pref="65" max="32767" attributes="0"/>
+                      <Component id="btnBorrarProducto" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
@@ -601,7 +592,7 @@
               <Font name="Tahoma" size="14" style="0"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/icons/delete_delete_exit_1577.png"/>
+              <Image iconType="3" name="/Imagenes/delete_delete_exit_1577.png"/>
             </Property>
           </Properties>
         </Component>
@@ -611,7 +602,7 @@
               <Font name="Tahoma" size="14" style="0"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/icons/arrowdown_flech_1539.png"/>
+              <Image iconType="3" name="/Imagenes/arrowdown_flech_1539.png"/>
             </Property>
           </Properties>
         </Component>
@@ -631,7 +622,7 @@
               <Font name="Tahoma" size="14" style="0"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/icons/uparrow_arriba_1538.png"/>
+              <Image iconType="3" name="/Imagenes/uparrow_arriba_1538.png"/>
             </Property>
           </Properties>
         </Component>
